--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,19 @@
 /* styles.css */
 
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -29,7 +43,6 @@ nav {
   justify-content: center;
   background-color: #555;
   padding: 1em;
-  width: 100%;
 }
 
 nav ul {
@@ -79,6 +92,7 @@ footer {
   color: white;
   text-align: center;
   padding: 1em 0;
+  width: 100%;
 }
 
 /* Responsive design */
