--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,31 @@ footer {
   width: 100%;
 }
 
-/* Responsive design */
+.language-toggle select {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background-color: #555555;
+  border: 1px solid #cccccc;
+  padding: 8px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.language-toggle select:focus {
+  outline: none;
+}
+
+.language-toggle select option {
+  color: black;
+  background-color: #ffffff;
+}
+
 @media screen and (max-width: 768px) {
   nav li {
       float: none;
