--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body::-webkit-scrollbar {
   width: 10px;
 }
@@ -30,6 +28,7 @@ header {
   color: white;
   text-align: center;
   padding: 1em 0;
+  font-size: 1.3rem;
 }
 
 main {
@@ -38,9 +37,6 @@ main {
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #555;
   padding: 1em;
 }
@@ -50,17 +46,19 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav li {
-  float: left;
-  margin-right: 20px;
+  margin: 0 10px;
 }
 
 nav a {
   display: block;
   color: white;
-  padding: 10px 10px;
+  padding: 10px;
   text-decoration: none;
   transition: background-color 0.3s;
   border-radius: 10px;
@@ -103,7 +101,7 @@ footer {
   border: none;
   padding: 10px 20px;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 1.3rem;
   color: white;
   cursor: pointer;
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>');
@@ -128,6 +126,7 @@ footer {
 .changelog-table {
   width: 100%;
   border-collapse: collapse;
+  overflow-x: auto;
 }
 
 .changelog-table th, .changelog-table td {
@@ -139,7 +138,7 @@ footer {
 .collapsible {
   display: flex;
   width: fit-content;
-  padding: 10px 10px;
+  padding: 10px;
   cursor: pointer;
   align-items: center;
   gap: 10px;
@@ -162,13 +161,33 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-  nav li {
-      float: none;
-      margin: 0;
-      text-align: center;
+  nav ul {
+    flex-direction: column;
+    align-items: center;
   }
 
-  nav ul {
-      text-align: center;
+  nav li {
+    margin: 10px 0;
+  }
+
+  .collapsible {
+    padding: 10px 20px;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+  
+  section {
+    padding: 10px;
+  }
+  
+  h2 {
+    font-size: 1.5rem;
+  }
+  
+  p {
+    font-size: 1rem;
   }
 }
